# Operon

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES_v3.1.0.md  ROADMAP.md  SECURITY.md  build_dmg.py  build_windows.py  docker-compose.yml  generate_comparison.py  generate_docs.py  generate_setup_guide.py  install.ps1  install.py  install.sh  main.py  operon.spec  pyproject.toml  requirements.txt  setup_wizard.py  test_all.py
.github/: ABOUT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cmd_handlers/: __init__.py  config_cmds.py  info.py  macro_cmds.py  session_cmds.py
core/: acp_adapter.py  background_review.py  bootstrap.py  browser_stealth.py  browser_supervisor.py  btw.py  checkpoint_manager.py  command_risk.py  commitments.py  compaction_audit.py  computer_use.py  config.py  context_compressor.py  context_pruner.py  conversation_compression.py  cost_tracker.py  credential_pool.py  curator.py  dashboard.py  delegation_bus.py  dep_audit.py  doctor.py  gateway.py  goal_tracker.py  heartbeat.py  iteration_budget.py  kanban.py  knowledge.py  macros.py  mcp.py  mcp_server.py  memory.py  memory_facade.py  memory_providers.py  memory_store.py  model_router.py  multi_agent.py  notify.py  obsidian_memory.py  orchestrator.py  (+33 more)
plugins/examples/: README.md
plugins/examples/codec/: plugin.json  tools.py
plugins/examples/hashing/: plugin.json  tools.py
plugins/examples/json_tools/: plugin.json  tools.py
plugins/examples/text_stats/: plugin.json  tools.py
plugins/examples/uuid_gen/: plugin.json  tools.py
tests/: __init__.py  test_agent_loop_integration.py  test_background_compact.py  test_bootstrap.py  test_browser.py  test_browser_stealth.py  test_browser_supervisor.py  test_checkpoint_manager.py  test_cloud_exec.py  test_cmd_handlers.py  test_computer_use.py  test_context_compressor.py  test_conversation_compression.py  test_credential_pool.py  test_data_analysis.py  test_db_ops.py  test_delegate.py  test_delegation_bus.py  test_dep_audit.py  test_discord_ops_v2.py  test_example_plugins.py  test_file_ops.py  test_git_ops.py  test_github_ops.py  test_harvest_phase234.py  test_http_client.py  test_image_gen.py  test_macro_cmds.py  test_memory_facade.py  test_memory_store.py  test_model_router.py  test_multi_agent.py  test_notify.py  test_obsidian_memory.py  test_parallel_dispatch.py  test_parallel_executor.py  test_pdf_ops.py  test_phase11_coverage.py  test_plugin_registry.py  test_plugin_sdk_extended.py  (+17 more)
tools/: apply_patch.py  browser.py  cloud_exec.py  code_exec.py  computer_use.py  data_analysis.py  db_ops.py  delegate.py  discord_ops.py  docker_exec.py  email_draft.py  email_send.py  file_ops.py  file_search.py  git_ops.py  github_ops.py  http_client.py  image_gen.py  irc_ops.py  knowledge_ops.py  llm_task.py  matrix_ops.py  mattermost_ops.py  messaging.py  pdf_ops.py  registry.py  shell_exec.py  signal_ops.py  slack_ops.py  ssh_exec.py  teams_ops.py  telegram_ops.py  video_gen.py  vision.py  visual_grounding.py  voice_input.py  web_search.py  whatsapp_ops.py
ui/: banner.py  theme.py  tui.py
